--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   readmore: ^3.0.0
   flutter_staggered_grid_view: ^0.7.0
   shared_preferences: ^2.5.4
+  firebase_auth: ^6.1.4
+  google_sign_in: ^7.2.0
+  firebase_core: ^4.4.0
 
 
 dev_dependencies:
